--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "babel": "^6.23.0",
     "history": "^4.7.2",
     "react": "^16.2.0",
@@ -14,6 +15,7 @@
     "react-scripts": "1.1.0",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.0.2",
     "webpack": "^3.10.0"
