--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "1.1.0",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
+    "redux-persist": "^5.5.0",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.0.2",
